[gd_scene load_steps=4 format=3 uid="uid://47u51qruffq0"]

[ext_resource type="Script" uid="uid://g47ilhleki06" path="res://UI/Pause/pause.gd" id="1_khu4g"]
[ext_resource type="Script" uid="uid://ce6ocn8vf4b1w" path="res://UI/Components/CountingLabel.gd" id="3_woc51"]
[ext_resource type="Texture2D" uid="uid://crvd6jl7ykeyr" path="res://UI/Assets/button.webp" id="4_r1epl"]

[node name="Pause" type="CanvasLayer"]
script = ExtResource("1_khu4g")

[node name="background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="Continue_Button" type="Button" parent="."]
layout_direction = 2
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -520.0
offset_right = -562.0
offset_bottom = -245.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_colors/font_hover_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_colors/font_outline_color = Color(1, 0.960784, 0.592157, 1)
theme_override_colors/font_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_colors/font_focus_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_colors/font_pressed_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 57
text = "Continue"
icon = ExtResource("4_r1epl")
flat = true
icon_alignment = 1

[node name="Back_Button" type="Button" parent="."]
layout_direction = 2
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 580.0
offset_top = -520.0
offset_right = -62.0
offset_bottom = -245.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_colors/font_hover_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_colors/font_outline_color = Color(1, 0.960784, 0.592157, 1)
theme_override_colors/font_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_colors/font_focus_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_colors/font_pressed_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 84
text = "Back"
icon = ExtResource("4_r1epl")
flat = true
icon_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_top = 0.276
anchor_right = 1.0
anchor_bottom = 0.514
offset_top = -0.920044
offset_right = -1.0
offset_bottom = 0.119995
grow_horizontal = 2
grow_vertical = 2

[node name="RoundScoreLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.960784, 0.592157, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 30
theme_override_font_sizes/font_size = 68
text = "Round Score: 0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
script = ExtResource("3_woc51")
prefix = "Round Score: "

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.960784, 0.592157, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 30
theme_override_font_sizes/font_size = 68
text = "High Score: 0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
script = ExtResource("3_woc51")
prefix = "High Score: "

[node name="TotalScoreLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.960784, 0.592157, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 30
theme_override_font_sizes/font_size = 68
text = "Total Score: 0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
script = ExtResource("3_woc51")
prefix = "Total Score: "

[connection signal="pressed" from="Continue_Button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Back_Button" to="." method="_on_back_button_pressed"]
